# DeepMuonReco

./: .gitignore  AGENTS.md  README.md  environment.yaml  pyproject.toml  setup.fish  setup.sh  train.py
config/: config.yaml  default.yaml  main.yaml  no-hit.yaml  no-rpc-hit.yaml  no-rpc.yaml  ttbar-2024pu.yaml
config/augmentation/: none.yaml
config/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  rich_model_summary.yaml
config/criterion/: bce.yaml  track_bce.yaml
config/criterion_reduction/: masked_mean.yaml  mean.yaml
config/data/: default.yaml  mu2030pu.yaml  test.yaml  ttbar-2024pu_dev.yaml
config/data_load/: default.yaml
config/data_loader/: default.yaml
config/data_loading/: default.yaml
config/dataset/: default.yaml
config/debug/: default.yaml  sanity-check.yaml  test.yaml
config/eval/: default.yaml
config/exp/: default.yaml
config/fit/: default.yaml
config/hydra/: default.yaml
config/logger/: default.yaml
config/loss/: asymmetric_focal.yaml  default.yaml  focal.yaml  focal_highpt.yaml  focal_minpos.yaml  focal_ptbal.yaml  focal_rank.yaml  pt_0_3.yaml  pt_bin.yaml  pt_mask.yaml
config/lr_scheduler/: plateau.yaml  sgdr.yaml
config/metric/: default.yaml  none.yaml  test.yaml
config/misc/: default.yaml
data/: sanity-check.root
docs/: data-format.md  data.md  issue_target-16777216.md  loss.md  metric.md  muon-id-producer.md  ntuplizer.md  onnx.md  plan.md  project.md
scripts/: analyze-high-pt.py  benchmark-onnx.py  dump-scores.py  export.py  get-prep-params.py  predict-onnx.py  predict.py  train.py
(+80 files in other folders)
