[project]
name = "muonly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "tensordict>=0.8.3",
    "einops>=0.8.1",
    "lightning>=2.5.1",
    "torchmetrics>=1.7.3",
    "onnx",
    "onnxruntime",
    "aim",
    "h5py",
    "uproot",
    "hist",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "tqdm",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "hydra-colorlog",
    "coolname",
    "htcondor",
    "rich>=14.3.3",
    "setuptools==81.0.0",
    "mplhep>=1.1.2",
    "ruff>=0.15.4",
    "h5glance>=0.9.0",
    "torchinfo>=1.8.0",
    "psutil>=7.2.2",
    "humanize>=4.15.0",
    "rich-argparse>=1.8.0",
    "onnxscript>=0.7.0",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ruff",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "muonly"
module-root = "src"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.ruff]
exclude = ["*.ipynb"]
